added user creation logic
