# app/launchpad/launchpad_api/controllers/user_controller.py
@@ -5,7 +5,7 @@ from launchpad_api.models.user_request import UserRequest  # noqa: E501
 from launchpad_api import util
 from launchpad_api.db_models.user import User
 from launchpad_api.utils.messages import generic_message
-
+from launchpad_api.utils import transform_data
 
 
 def user_delete(user_id):  # noqa: E501
@@ -21,7 +21,7 @@ def user_delete(user_id):  # noqa: E501
     return 'do some magic!'
 
 
-def user_get():  # noqa: E501
+def user_get(id):  # noqa: E501
     """Get list of users
 
      # noqa: E501
@@ -30,20 +30,7 @@ def user_get():  # noqa: E501
     :rtype: Union[object, Tuple[object, int], Tuple[object, int, Dict[str, str]]
     """
 
-    result = 400
-    payload = {"message":generic_message}
-    
-    try:
-        users = User.get_all_users()
-
-        if users:
-            result = 200
-            payload = {"data":users,"message":"User data successfully fetched"}
-       
-    except Exception as error:
-        print(error)
-
-    return jsonify(payload),result
+    return "get user api not implement yet"
 
 def user_post(body):  # noqa: E501
     """Create a new user
@@ -73,7 +60,8 @@ def user_post(body):  # noqa: E501
         response = user.create_row()
         
         if response:
-            payload = {"message":"User Created Succesfully"}
+            data = transform_data.transform_user(user)
+            payload = {"message":"User Created Succesfully","data":data}
             result = 200
         else:
             payload = {"message":"User creation failed"}
@@ -98,3 +86,27 @@ def user_put(body):  # noqa: E501
     if connexion.request.is_json:
         user_request = UserRequest.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
+
+def user_all_get():  # noqa: E501
+    """Get list of users
+
+     # noqa: E501
+
+
+    :rtype: Union[object, Tuple[object, int], Tuple[object, int, Dict[str, str]]
+    """
+    result = 400
+    payload = {"message":generic_message}
+    
+    try:
+        users = User.get_all_users()
+
+        if users:
+            all_users = transform_data.transform_users(users)
+            result = 200
+            payload = {"data":all_users,"message":"User data successfully fetched"}
+       
+    except Exception as error:
+        print(error)
+
+    return jsonify(payload),result
